tests/compile_fail/partial_eq/union.stderr
error: `PartialEq` cannot be derived for unions
 --> tests/compile_fail/partial_eq/union.rs:2:1
  |
2 | union IntOrFloat {
  | ^^^^^
